# Finetuning

./: FineTunning.xlsx  createfile.py  file-tunning.jsonl  finetunning.py  pyproject.toml  tunningview.py
