[tool.poetry]
name = "finetunning"
version = "0.1.0"
description = ""
authors = ["Guilherme Lima Braga <guilhermelimabraga90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.35.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
